--- a/src/main/resources/assets/orbsat/lang/en_US.lang
+++ b/src/main/resources/assets/orbsat/lang/en_US.lang
@@ -1,23 +1,5 @@
-#item.item_ob_lense.name=Laser Lens
-#item.item_ob_condenser.name=Photon Condenser
-#item.item_ob_capacitor.name=Photon Capacitor
-#item.item_ob_designatorLow.name=Low Power Designator
-#item.item_ob_designatorMed.name=Medium Power Designator
-#item.item_ob_designatorHigh.name=High Power Designator
-#item.item_ob_laserGunLow.name=Low Power Laser Gun
-#item.item_ob_laserGunMed.name=Medium Power Laser Gun
-#item.item_ob_laserGunHigh.name=High Power Laser Gun
-#tile.obOverrider.name=Laser Satelite Overrider
-#tile.obExtender.name=Extender
-#tile.obSatelite.name=Laser Satelite Prototype LX-I
-#tile.obDefender.name=Laser Strike Defender
-#tile.obAccelerator.name=Photon Accelerator
-#tile.obDecelerator.name=Photon Deccelerator
-#tile.obInverterAdv.name=Advanced Photonic Converter
-#tile.obInverter.name=Photonic Converter
-
 #CreativeTabs
-itemGroup.orbsat.name=Orbital Satellite
-
+itemGroup.orbsat=Orbital Satellite
 #Items
-item.laserDesignator_mki.name=Laser Designator MK-I
+item.laserDesignator.name=Targeting Satellite Computer
+item.designatorCircuit.name=Targeting Computer Circuit
