--- a/src/main/resources/assets/orbsat/lang/fr_FR.lang
+++ b/src/main/resources/assets/orbsat/lang/fr_FR.lang
@@ -3,6 +3,9 @@ itemGroup.orbsat=Satellite Orbital
 #Items
 item.orbsat.components.laserDesignator.name=Ordinateur de visée du satellite
 item.orbsat.components.designatorCircuit.name=Circuit pour ordinateur de visée
+item.orbsat.components.photonLens.name=Lentille
+item.orbsat.components.photonConcentrator.name=Concentrateur à photon
+item.orbsat.components.photonCapacitor.name=Condensateur à photon
 item.orbsat.satellites.classic_mki.name=Satellite classique de frappe laser MK-I
 item.orbsat.satellites.classic_mkii.name=Satellite classique de frappe laser MK-II
 item.orbsat.satellites.classic_mkiii.name=Satellite classique de frappe laser MK-III
