--- a/src/main/resources/assets/orbsat/lang/en_US.lang
+++ b/src/main/resources/assets/orbsat/lang/en_US.lang
@@ -13,10 +13,10 @@ item.orbsat:advancedTargetDevice.name=Advanced Targeting Device
 item.orbsat:involvedTargetDevice.name=Involved Targeting Device
 
 // Tiles --------------------------------------------------
+tile.orbsat:defender.name=Laser Defender
 tile.obOverrider.name=Laser Satelite Overrider
 tile.obExtender.name=Extender
 tile.obSatelite.name=Laser Satelite Prototype LX-I
-tile.obDefender.name=Laser Strike Defender
 tile.obAccelerator.name=Photon Accelerator
 tile.obDecelerator.name=Photon Deccelerator
 tile.obInverterAdv.name=Advanced Photonic Converter
